# Laboratorio_Sistemas_Distribuidos

./: README.md  file_manager.yaml
Practica-2/fm_deployment/: Dockerfile  fileServer  file_manager.yaml  file_manager_service.yaml  launch_filemanager.sh
Practica-2/matrix_deployment/: Dockerfile  launch_multmatrix.sh  mainServer  mult_matrix.yaml  mult_matrix_service.yaml  pvc.yaml  resultado.txt  resultado2.txt
kubernetes/: bootcamp.yaml  history_del_master.txt  history_del_slave.txt  kubeadm_join.txt  service.yaml
kubernetes/scripts_kubernetes/: comandos_importantes.txt  kub_install.sh  kub_reset.sh  kubeadm_join
kubernetes/scripts_kubernetes_J2023_/scripts_kubernetes/: kub_install.sh  kub_reset.sh
kubernetes/scripts_payo/: comandosDistribuidos.txt  comandosReinstalacionPod.txt  comfiguracionDocker.txt  configuracionDockerResumida.txt  kubernetes_join
practica-1/fileManager/: CMakeCache.txt  CMakeLists.txt  Makefile  clientConsole.cpp  clientConsole.h  cmake_install.cmake  fileClient  fileMaganerServer.cpp  fileManager  fileManagerClient.cpp  fileManagerClient.h  fileManagerServer.cpp  fileManagerServer.h  fileServer  filemanager.h  mainConsole.cpp  mainFileClient.cpp  mainFileServer.cpp  mainPruebaCliente.cpp  main_fm.cpp  pruebaCliente  serialize.cpp  serialize.h
practica-1/fileManager/dirprueba/: A_El_que_escribe.txt  escribir.txt  leer1.txt  prueba1.txt  prueba12.txt
practica-1/multMatrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainClient  mainClient.cpp  mainServer  mainServer.cpp  main_multMatrix  main_multMatrix.cpp  multmatrix.cpp  multmatrix.h  multmatrix_imp.cpp  multmatrix_imp.h  multmatrix_stub.cpp  multmatrix_stub.h  resultado.txt  resultado2.txt  serialize.cpp  serialize.h  serialize.hpp  utils.h
practica-3/lambda/: .env
practica-3/test/: .env
